Fix missing border on certain panels

--- a/openidm-ui/openidm-ui-admin/src/main/resources/css/config/adminStyle.less
+++ b/openidm-ui/openidm-ui-admin/src/main/resources/css/config/adminStyle.less
@@ -648,14 +648,6 @@ Dialog Catch
 /*
   Tab content
 */
-
-.tab-pane {
-  &>.panel.panel-default {
-    border-top: 0;
-    border-radius: 0;
-  }
-}
-
 .panel-collapse-group {
   border:none;
 }
